# claude-code-decaf

./: .gitignore  CLAUDE.md  README.md  SDD-Process-Summary.md  agent.py  events.py  joke.txt  main.py  pyproject.toml
.myspecs/: specs.md
.specify/memory/: constitution.md
listeners/: approval.py  logging.py  ui.py
providers/: anthropic.py
specs/001-simple-claude-code/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-simple-claude-code/checklists/: requirements.md
specs/001-simple-claude-code/contracts/: interfaces.md
specs/002-us1-tests/: plan.md  spec.md  tasks.md
tests/: conftest.py  test_agent.py  test_events.py  test_integration_agent.py  test_integration_repl.py  test_loader.py  test_main.py  test_provider.py
tools/: config.yaml  loader.py
tools/find_files/: SKILL.md  tool.py
tools/list_directory/: SKILL.md  tool.py
tools/prettier/: SKILL.md
tools/read_file/: SKILL.md  tool.py
tools/run_bash/: SKILL.md  tool.py
tools/update_memory/: SKILL.md  tool.py
tools/write_file/: SKILL.md  tool.py
