[project]
name = "claude-code-decaf"
version = "0.1.0"
description = "An educational re-implementation of Claude Code with transparent agent loop, memory system, and tool execution"
requires-python = ">=3.12"
dependencies = [
    "anthropic",
    "rich",
    "aioconsole",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]
